# game-server-auto-shutdown

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
gui/: __init__.py  app.py  service_control.py
scripts/: build_exe.ps1  install_service.ps1
src/amp_autoshutdown/: __init__.py  __main__.py  api_amp.py  config.py  logging_setup.py  monitor.py  service.py
tests/: test_api_amp.py  test_monitor.py
